edit to try to get url to work and move sync config

--- a/config/database.yml
+++ b/config/database.yml
@@ -82,6 +82,6 @@ test:
 #
 production:
   <<: *default
-  database: atlas-rails_production
-  username: atlas-rails
-  password: <%= ENV['ATLAS-RAILS_DATABASE_PASSWORD'] %>
+  database: resqueme_production
+  #username: atlas-rails
+ # password: <%= ENV['ATLAS-RAILS_DATABASE_PASSWORD'] %>
